tests/idris2/coverage/coverage022/expected
1/1: Building Issue3477 (Issue3477.idr)
Error: test is not covering.

Issue3477:1:1--1:55
 1 | test : (xs : List Int) ->  2 = length xs -> (Int, Int)
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test [_, _] _

